Fixed header title alignment

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -66,18 +66,15 @@
     background-color: var(--alice-blue);
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     height: 20vh;
     border-bottom: 2px solid var(--manatee) ;
-}
-
-.card{
-    width: 20vw;
-    height: 10vh;
 }
 .card-body{
     background-color: var(--manatee);
     color:var(--alice-blue);
     filter: drop-shadow(0 5px 5px #6c757d);
+    max-height: 18vh;
 
 }
 
@@ -93,7 +90,7 @@
     width:1000%
 }
 .showcaseCon{
-    /* background-color: var(--alice-blue); */
+    margin-top: 10vh;
     height: 100vh;
     width: 100%;
 }
